# MillardSreenivasaMombaur2017

./: LICENSE  README.md
simulation/OCP/: CMakeLists.txt  modelTest  runMuscod.sh  runMuscodCold.sh  runMuscodWarm.sh
simulation/OCP/CMake/: UseMUSCOD.cmake
simulation/OCP/CMake/Modules/: Build.cmake  BuildFortran.cmake  BuildMuscodApps.cmake  CompilerOptions.cmake  CompilerSettingsC.cmake  CompilerSettingsCpp.cmake  CompilerSettingsFortran.cmake  FindADOLC.cmake  FindAMPLSOLVER.cmake  FindBOOST.cmake  FindCPLEX.cmake  FindJMODELICA.cmake  FindMATLAB.cmake  FindPGPLOT.cmake  FindPYTHONPACKAGES.cmake  FindPythonLibsNew.cmake  FindSUNDIALS.cmake  InstallCmakeModules.cmake
simulation/OCP/CMake/Modules/.hg/: dirstate  hgrc  undo.desc
simulation/OCP/DAT/: initialStates_.csv  rightyExo.ods  solutionStates.csv  vuaExo6Pt2D.lua  vuaExoRighty6Pt2D.lua  vuaHuman2dRightyExo_15kgBox_BaumgarteDisabled.lua  vuaHuman2dRightyExo_15kgBox_BaumgarteEnabled.lua  vuaHuman2dRighty_15kgBox_BaumgarteDisabled.lua  vuaHuman2d_15kgBox_BaumgarteDisabled.lua
simulation/OCP/DAT/meshes/: exoPelvisModuleWithMotors.blend
simulation/OCP/PRE/: fitting_log.csv  vuaHuman2d.lua  vuaHuman2d_15kgBox_BaumgarteDisabled.lua  vuaHuman3d.lua
simulation/OCP/PRE/ID/2D/: actAnalysis_act_stoop1.csv  actAnalysis_act_stoop2.csv  actAnalysis_ta_stoop1.csv  actAnalysis_ta_stoop2.csv  actAnalysis_ta_stoop3.csv  actAnalysis_tp_stoop1.csv  actAnalysis_tp_stoop3.csv  actAnalysis_tv_stoop2.csv  act_stoop1.csv  act_stoop2.csv  act_stoop3.csv  muscleProperties.csv  muscleStrengthScaleFactor_stoop1.csv  qDotDot_stoop1.csv  qDot_stoop1.csv  qDot_stoop2.csv  qDot_stoop3.csv  q_stoop1.csv  residual_stats_stoop2.txt  residual_stats_stoop3.txt  stoop1.csv  stoop2.csv  tau_stoop2.csv  (+1 more)
simulation/OCP/RES/minActSqExo_Converged/: wholebodylifter2d.csv  wholebodylifter2d.txt  wholebodylifter2d_augmented_columnNames.txt  wholebodylifter2d_columnNames.txt
simulation/OCP/RES/minActSq_converged/: wholebodylifter2d.csv  wholebodylifter2d.txt  wholebodylifter2d_augmented_columnNames.txt  wholebodylifter2d_columnNames.txt
simulation/OCP/SRC/: LuaTypes.h  SplineInterpolator.h  csvtools.h  datfileutils.h  evalcxerr.cc  pergatory.txt  string_utils.h  test.cc  wholebodylifter2d.cc  wholebodylifter2d_EnumMap.cc  wholebodylifter2d_EnumMap.h  wholebodylifter2d_Enums.h  wholebodylifter2d_Model.cc  wholebodylifter2d_Model.h
(+176 files in other folders)
