CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

PROJECT( "muscod_boxlifter2d" CXX C )
SET(CUSTOM_RBDL_PATH "" CACHE PATH "Path to specific RBDL Installation")

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
	${PROJECT_SOURCE_DIR}/CMake/Modules)

INCLUDE( SimOptDefaults )

FIND_PACKAGE( MUSCOD REQUIRED )  # find and include "MUSCODConfig.cmake"
IF( MUSCOD_FOUND )
	INCLUDE( ${MUSCOD_USE_FILE} )
ENDIF( MUSCOD_FOUND )

FIND_PACKAGE (PGPLOT REQUIRED )
FIND_PACKAGE (RBDL COMPONENTS LUAMODEL REQUIRED)
FIND_PACKAGE (Lua51 REQUIRED)
FIND_PACKAGE (Eigen3 3.0.0 )

INCLUDE_DIRECTORIES ( ${RBDL_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} )

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic -std=c++11 -fext-numeric-literals")
endif()

ADD_LIBRARY ( wholebodylifter2d
	SRC/wholebodylifter2d.cc
	SRC/wholebodylifter2d_EnumMap.cc
	SRC/wholebodylifter2d_Model.cc
	SRC/csvtools.cc
	)


TARGET_LINK_LIBRARIES ( wholebodylifter2d
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	${LUA_LIBRARIES}
	${RBDL_MUSCLE_LIBRARY}
	${RBDL_GEOMETRY_LIBRARY}
	${PGPLOT_CPGPLOT_LIBRARY}
	${PGPLOT_PGPLOT_LIBRARY}
	)


add_executable(evalcxerr
	SRC/evalcxerr.cc
	SRC/wholebodylifter2d_EnumMap.cc
	SRC/wholebodylifter2d_Model.cc
	SRC/csvtools.cc
	)

TARGET_LINK_LIBRARIES ( evalcxerr
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	${LUA_LIBRARIES}
	${RBDL_MUSCLE_LIBRARY}
	${RBDL_GEOMETRY_LIBRARY}
	)

message("CUSTOM_RBDL_PATH         :" ${CUSTOM_RBDL_PATH})
message("RBDL_INCLUDE_DIR         :" ${RBDL_INCLUDE_DIR})
message("RBDL_LIBRARY             :" ${RBDL_LIBRARY})
message("RBDL_LUAMODEL_LIBRARY    :" ${RBDL_LUAMODEL_LIBRARY})
message("RBDL_MUSCLE_INCLUDE:" ${RBDL_MUSCLE_INCLUDE_DIR})
message("RBDL_MUSCLE_LIBRARY:" ${RBDL_MUSCLE_LIBRARY})
message("RBDL_GEOMETRY_INCLUDE    :" ${RBDL_GEOMETRY_INCLUDE_DIR})
message("RBDL_GEOMETRY_LIBRARY    :" ${RBDL_GEOMETRY_LIBRARY})
message("LUA_LIBRARIES            :" ${LUA_LIBRARIES})
message("EIGEN3_INCLUDE_DIR       :" ${EIGEN3_INCLUDE_DIR})

EXECUTE_PROCESS(COMMAND mkdir -p ./RES)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/SRC)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/DAT)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/default.plot)
